--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,13 @@ body {
     margin: 20px 0;
     width: 80%;
     min-width: 300px;
-    max-width: 350px;
-    padding: 20px;
+    max-width: 320px;
+    padding: 23px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, calc(-50% - 20px));
-    border-radius: 20px;
+    border-radius: 15px;
     background: hsl(216, 50%, 16%);
     box-shadow: 0 20px 10px 15px hsl(219, 51%, 11%), 0 0 15px 30px hsl(219, 55%, 12%);
 }
@@ -68,7 +68,7 @@ body {
 
 .nft-info {
     margin-bottom: 15px;
-    padding: 15px 0;
+    padding: 20px 0;
     border-bottom: 1px solid hsl(215, 32%, 27%);
 }
 
@@ -91,9 +91,11 @@ body {
     font-size: 16px;
     margin: 15px 0;
     font-weight: 300;
+    line-height: 150%;
 }
 
 .nft-details {
+    margin-top: 20px;
     font-size: 14px;
 }
 
@@ -123,8 +125,12 @@ body {
     color: #8BACD9;
 }
 
+.author {
+    margin-bottom: 10px;
+}
+
 .avatar {
-    width: 32px;
+    width: 30px;
     vertical-align: middle;
     border: 1px solid white;
     border-radius: 50%;
